<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UIPlay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Row</string>
    <string name="button_below_label">Press Me</string>
    <string name="no_accounts_message">No Accounts Found</string>
    <string name="action_test">Test</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="title_section1">Account List (ScrollView)</string>
    <string name="title_section2">Account List (ListView)</string>
    <string name="title_section3">Account List (RecyclerView)</string>
    <string name="title_section4">Account List (CustomLayout)</string>
    <string name="title_section5">PagerView</string>
    <string name="title_section6">Account List V2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_tab2">Tab2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offer_button_label">Get Started</string>
    <string name="title_section7">Expandable List</string>
    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Closed</string>
    <string name="welcome_to_uiplay">Welcome to UIPlay</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_section8">Expandable Toolbar</string>
    <string name="menu_signoff">Sign Off</string>

</resources>
