<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="false"
            android:title="@string/title_section1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:title="@string/title_section2"/>
        <item
            android:id="@+id/navigation_item_3"
            android:title="@string/title_section3"/>
        <item
            android:id="@+id/navigation_item_4"
            android:title="@string/title_section4"/>
        <item
            android:id="@+id/navigation_item_5"
            android:title="@string/title_section5"/>
        <item
            android:id="@+id/navigation_item_6"
            android:title="@string/title_section6"/>
        <item
            android:id="@+id/navigation_item_7"
            android:title="@string/title_section7"/>
        <item
            android:id="@+id/navigation_item_8"
            android:title="@string/title_section8"/>

    </group>
</menu>